--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -2,7 +2,6 @@
 layout: post
 title: "Using CaaP and André, the voice-driven assistant bot, to enhance on-site inspection"
 author: "Pedro Dias and Anders Gill"
-#author-link: "#"
 #author-image: "../images/powel/pedrodias.jpg"
 date: 2017-06-19
 categories: [Bot Framework]
@@ -39,17 +38,17 @@ The hackfest occurred after multiple calls in which the problem area was demysti
 
 ### Core team
 
-| Company | Person | Role
-| --- | --- | ---
-| Powel | Damian Plaza | Software Engineer
-| | Jakub Hiszczyn | Software Engineer
-| | Karol Stosik | Software Engineer
-| | Maksymilian Jastrzebski | Software Engineer
-| | Tor Hovland | Software Engineer
-| | Simen Karlsen | Smart Grid-Enabler
-| | Øystein Askeland | Interaction Designer
-| Microsoft | Pedro Dias | Sr. Technical Evangelist
-| | Anders Gill | Technical Evangelist
+- Powel
+  - Damian Plaza, Software Engineer
+  - Jakub Hiszczyn, Software Engineer
+  - Karol Stosik, Software Engineer
+  - Maksymilian Jastrzebski, Software Engineer
+  - Tor Hovland, Software Engineer
+  - Simen Karlsen, Smart Grid-Enabler
+  - Øystein Askeland, Interaction Designer
+- Microsoft
+  - Pedro Dias, Sr. Technical Evangelist
+  - Anders Gill, Technical Evangelist
 
 ## Solution overview
 
@@ -343,14 +342,12 @@ public async Task AssetAllGood(IDialogContext context, LuisResult result)
 
 In the preceding scenario, the field engineer is asked to confirm with either "Yes" or "No" (by either tapping the appropriate button or using natural voice to respond), but many other types of data-collection inputs can be chosen:
 
-Prompt type | Description
---- | ---
-Prompts.text | Asks the user to enter a string of text
-Prompts.confirm | Asks the user to confirm an action
-Prompts.number | Asks the user to enter a number
-Prompts.time | Asks the user for a time or date
-Prompts.choice | Asks the user to choose from a list of choices
-Prompts.attachment | Asks the user to upload a picture or video
+- **Prompts.text** Asks the user to enter a string of text
+- **Prompts.confirm** Asks the user to confirm an action
+- **Prompts.number** Asks the user to enter a number
+- **Prompts.time** Asks the user for a time or date
+- **Prompts.choice** Asks the user to choose from a list of choices
+- **Prompts.attachment** Asks the user to upload a picture or video
 
 #### FormFlow
 
