--- a/_posts/2017-01-10-Statoil.md
+++ b/_posts/2017-01-10-Statoil.md
@@ -60,7 +60,9 @@ The hackfest team included members from Microsoft, Statoil, and consultants from
 [Statoil](http://www.statoil.com) is an international energy company with operations in 37 countries. Building on more than 40 years of experience from oil and gas production on the Norwegian continental shelf, they are committed to accommodating the world's energy needs in a responsible manner, applying technology and creating innovative business solutions. They have approximately 22,000 employees worldwide, and are listed on the New York and Oslo stock exchanges. 
 
 Statoil has high ambitions for international growth and has business operations in 37 countries around the world, as shown in the following diagram. 
- 
+
+<br/>
+
 ![Statoil business operations]({{ site.baseurl }}/images/Statoil/statoil-map.png) 
 
 <br/>
@@ -120,7 +122,7 @@ The new solution includes an improved build definition, release manager, and aut
 
 <br/>
 
-### Part 1 - Using continuous integration to build the beta test version, trigger automatic UI testing, and deploy the app
+### Part 1: Using CI to build the beta test version, trigger automatic UI testing, and deploy the app
 
 The DevOps practices we are enabling are:
 
@@ -134,17 +136,11 @@ The CI build triggers the test release flow (see previous diagram), after which 
 
 The Release Manager definition includes three steps to execute the UI test by using the tool *mobile-center*:
 
-1.	Install the `mobile-center-cli` so the release agent can execute commands against mobile-center.
+1.	Install the `mobile-center-cli` so the release agent can execute commands against mobile-center: execute npm with arguments `install -g mobile-center-cli`.
 
-     - Execute npm with arguments `install -g mobile-center-cli`.
+2.	Sign in to mobile-center using build definition variables: execute mobile-center with arguments `login -u $(mobilecenteruser) -p $(mobilecenterpassword)`.
 
-2.	Sign in to mobile-center using build definition variables.
-
-     -	Execute mobile-center with arguments `login -u $(mobilecenteruser) -p $(mobilecenterpassword)`.
-
-3.	Execute UI test in mobile-center.
-
-     -	Execute mobile-center with the following arguments: 
+3.	Execute UI test in mobile-center: execute mobile-center with the following arguments: 
    
      ```
        test run uitest 
@@ -165,13 +161,13 @@ The Release Manager definition includes three steps to execute the UI test by us
 
 After a successful UI test, the beta build is distributed to all beta testers by using HockeyApp. Only beta testers are enrolled into HockeyApp. In the following diagram, we can see the information about the beta test version inside HockeyApp. In addition to distributing beta versions, Statoil uses HockeyApp to gather crash reports and feedback.
 
+<br/>
+
 ![HockeyApp definition]({{ site.baseurl }}/images/Statoil/hockeyapp.png) 
 
 <br/>
 
-
-
-### Part 2 - Building the release candidate and release version
+### Part 2: Building the release candidate and release version
 
 This build step is activated manually by the developers when they want to build the release candidate and release versions. This step compiles two different versions from the same source code snapshot; the only difference in the binaries are the endpoints that the apps connect to.
 
@@ -198,6 +194,8 @@ We solved this by enabling multi-configuration in the build definition.
 The variable `BuildConfiguration` contains the different builds to be executed. In this build definition, the variable contains `RELEASE_` and `RC_`.
 
 Some of the parameters in the source code need to be unique for the release and RC. We solved this by prefixing the variables with the `BuildConfiguration` variable name and then creating two versions of the variables and prefixing them with `RELEASE_` and `RC_`. For variables that were common, we didn’t prefix the variables.
+
+<br/>
 
 ![List of variables in the build definition]({{ site.baseurl }}/images/Statoil/build-vars.png) 
 
