Updated steps under Part 1

--- a/_posts/2017-01-10-Statoil.md
+++ b/_posts/2017-01-10-Statoil.md
@@ -136,11 +136,15 @@ The CI build triggers the test release flow (see previous diagram), after which 
 
 The Release Manager definition includes three steps to execute the UI test by using the tool *mobile-center*:
 
-1.	Install the `mobile-center-cli` so the release agent can execute commands against mobile-center: execute npm with arguments `install -g mobile-center-cli`.
+1.	Install the `mobile-center-cli` so the release agent can execute commands against mobile-center; execute npm with arguments: 
 
-2.	Sign in to mobile-center using build definition variables: execute mobile-center with arguments `login -u $(mobilecenteruser) -p $(mobilecenterpassword)`.
+     `install -g mobile-center-cli`
 
-3.	Execute UI test in mobile-center: execute mobile-center with the following arguments: 
+2.	Sign in to mobile-center using build definition variables; execute mobile-center with arguments:
+
+     `login -u $(mobilecenteruser) -p $(mobilecenterpassword)`
+
+3.	Execute UI test in mobile-center; execute mobile-center with the following arguments: 
    
      ```
        test run uitest 
