Feature 3 IoT case studies (#668)
* Updated 2016-11-22-FagorEderlan.md

* Updated 2016-11-21-IoT-ZionChina.md

* Updated 2017-01-03-ZPMC.md

--- a/_posts/2017-01-03-ZPMC.md
+++ b/_posts/2017-01-03-ZPMC.md
@@ -3,7 +3,7 @@ layout: post
 title: "Azure IoT launches evolution of ZPMC port-machinery business"
 author: "Warren Zhou"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date: 2017-02-15
+date: 2017-06-26
 categories: [IoT]
 color: "blue"
 image: "images/ZPMC/feat_QC.png"
@@ -11,7 +11,10 @@ excerpt: Microsoft and ZPMC teamed up to bring the ZPMC port-machinery business 
 verticals: [Discrete Manufacturing]
 language: [English]
 geolocation: [Asia]
+permalink: /iot/2017/02/15/ZPMC.html
+sticky: true
 ---
+*Updated with additional resources*
 
 Shanghai-based ZPMC manufactures heavy-duty equipment that enables modern shipping. That equipment is a major source of real-time data, which needs to be retrieved, monitored, and analyzed. Microsoft Azure IoT Suite is helping ZPMC transform its business from traditional manufacturing to comprehensive service provider.
 
