--- a/_posts/2017-06-10-Bragi.md
+++ b/_posts/2017-06-10-Bragi.md
@@ -9,10 +9,10 @@ categories: [IoT, PowerBI]
 color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: In this paper you will learn how we build telemetry service based on microsoft azure iot hub and visualize the data in PowerBi.
-language: The language of the article (e.g.: [English])
-verticals: The vertical markets this article has focus on (e.g.: [“Retail, Consumer Products & Services”, Communications/Media, Other])
-geolocation: The geolocation of the article
-permalink: /bragi.html"
+language: [English]
+verticals: [Communications]
+geolocation: [Europe]
+published: false
 ---
 
 **Solution overview**
