Add CTAs to 6 more IoT case studies (#684)
Add CTAs to 6 more IoT case studies

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -246,11 +246,16 @@ Further down the line, we will look at automating water pressure in various grid
 
 ![Leaking water]({{ site.baseurl }}/images/powel/leaking.jpg)
 
-
-## References
+## Additional resources
 
 <dl>
     <dt>A separate, DevOps-focused Powel team worked with Microsoft to implement the <b><i>SmartWater</i></b> application</dt>
     <dd>See <a href="https://microsoft.github.io/techcasestudies/devops/2016/11/19/Powel.html">Improving water monitoring through DevOps practices with Powel AS</a> for 
     more details about the solution architecture.</dd>
 </dl>
+
+- Get hands-on with [Azure IoT Hub tutorials](https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-get-started)
+- Find IoT devices and starter kits: [Azure IoT device catalog](https://catalog.azureiotsuite.com/kits?wt.mc_id=dx_883177)
+- Try any Azure services for free: [Create your free Azure account today](https://azure.microsoft.com/en-us/free/?wt.mc_id=dx_883176)
+- Check out a curated collection of IoT learning resources: [Microsoft Technical Community Content](https://github.com/Microsoft/TechnicalCommunityContent/tree/master/IoT?wt.mc_id=dx_883175) on GitHub
+- Read more IoT-focused [technical case studies](https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured?wt.mc_id=dx_883178) (like this one)
