--- a/_posts/2017-05-22-banqUP-PL.md
+++ b/_posts/2017-05-22-banqUP-PL.md
@@ -1,17 +1,17 @@
 ---
 layout: post
 title: "banqUP tworzy nowoczesną platformę bankową w chmurze Microsoft Azure"
-author: "Tomasz Wiśniewski, Dariusz Porowski"
+author: "Tomasz Wiśniewski and Dariusz Porowski"
 author-link: "https://aka.ms/TzA"
-author-image: "{{site.baseurl}}/images/authors/daporotomaszwi.jpg"
+#author-image: "{{site.baseurl}}/images/authors/daporotomaszwi.jpg"
 date: 2017-05-22
 categories: [DevOps, Azure App Service, Azure Functions]
 color: "blue"
-image: "{{site.baseurl}}/images/2017-05-22-banqup/banqup-logo.jpg"
+image: "{{site.baseurl}}/images/2017-05-22-banqup/feat-banqup-logo.png"
 excerpt: Niniejsze studium przypadku pokazuje, w jaki sposób platforma bankowości dla małych i średnich przedsiębiorstw została zbudowana w oparciu o chmurę Microsoft Azure, korzystając z wielu różnych technologii, takich jak usługa Azure App Service, Azure Functions. Dodatkowo wszystko jest koordynowane i wdrażane z Visual Studio Team Services.
 language: [Polish]
-verticals: [Financial Services]
-permalink: /PL-banqUP-DevOps-AzureFunctions.html
+verticals: [Banking & Capital Markets]
+geolocation: [Europe]
 ---
 
 Zaprojektowaliśmy i zaimplementowaliśmy platformę, która umożliwia stworzenie cyfrowego banku od podstaw, a także może pomóc istniejącym bankom wprowadzić innowacje z wybranych wertykałach.
