--- a/_posts/2017-02-21-Navitime.md
+++ b/_posts/2017-02-21-Navitime.md
@@ -5,13 +5,14 @@ author: "Masayuki Ota"
 author-link: "https://twitter.com/masota0517"
 #author-image: "{{ site.baseurl }}/images/authors/masota.jpg"
 date: 2017-06-28
-categories: [Cognitive Services]
+categories: [Cognitive Services, Bot Framework]
 color: "blue"
 image: "images/NavitimeTravel/feat_NavitimeTravel.png"
 excerpt: Travelers want to find local favorites, but they don't know the names of local food, the nearest sightseeing spot, and so on. Typical apps don't help, so they ask locals...if they can get through the language barrier. NAVITIME wants to solve this problem with chatbot communication.
 language: [English]
 verticals: [Hospitality & Travel]
 geolocation: [Asia]
+permalink: /cognitive%20services/2017/06/28/Navitime.html
 ---
 
 Travelers want unique experiences, but finding local food, sightseeing spots, and such can be challenging. With typical travel apps, travelers can find famous restaurants and locations but not local information. So travelers ask local people, which can be difficult given language barriers. For example, many travelers know sushi as Japanese food, but they don't know great local food such as shirasu-don and motsu-yaki.
