--- a/_posts/2017-02-21-Navitime.md
+++ b/_posts/2017-02-21-Navitime.md
@@ -12,7 +12,7 @@ excerpt: Travelers want to find local favorites, but they don't know the names o
 language: [English]
 verticals: [Hospitality & Travel]
 geolocation: [Asia]
-#permalink: /cognitive%20services/2017/06/28/Navitime.html
+permalink: /cognitive%20services/2017/06/28/Navitime.html
 ---
 
 Travelers want unique experiences, but finding local food, sightseeing spots, and such can be challenging. With typical travel apps, travelers can find famous restaurants and locations but not local information. So travelers ask local people, which can be difficult given language barriers. For example, many travelers know sushi as Japanese food, but they don't know great local food such as shirasu-don and motsu-yaki.
