--- a/_posts/2017-05-10-MedApp.md
+++ b/_posts/2017-05-10-MedApp.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  Using Xamarin, Mobile DevOps, and IoT to develop high quality medical applications with MedApp 
+title:  Developing high quality medical applications with MedApp using Xamarin, Mobile DevOps, and IoT  
 author: Karol Żak
 author-link: https://twitter.com/karolzak13
 #author-image: "{{ site.baseurl }}/images/MedApp/author.jpg"
 date: 2017-07-14
 categories: [Xamarin, Mobile DevOps, IoT]
 color: "blue"
-#image: "images/MedApp/testcloud5-header.png"
+image: "images/MedApp/testcloud5-header.png"
 excerpt: MedApp, a very innovative healthcare company, teamed up with Microsoft to work in the Xamarin, Mobile DevOps, and IoT areas to develop the best possible telemedicine solutions for customers all over the world.
 language: [English]
 verticals: [Retail & Consumer Goods, Health]
@@ -743,6 +743,19 @@ The team faced the following challenges:
 
 ### Solution, steps and delivery
 
+In this section:
+
+- [Components and architecture](#components-and-architecture)
+- [Protocol for Kompakt-5 devices](#protocol-for-kompakt-5-devices)
+- [Managing devices](#managing-devices)
+- [Device twins and physical address](#device-twins-and-physical-address)
+- [Routing](#routing)
+- [UWP dashboard](#uwp-dashboard)
+- [IoT Hub security summary](#iot-hub-security-summary)
+- [IoT Hub create automation](#iot-hub-create-automation)
+- [Sample reporting forms](#sample-reporting-forms)
+
+
 #### Components and architecture
 
 The main components are as follows (see IoT architecture diagram):
@@ -906,11 +919,15 @@ Using the library calling IoT Hub from the MedApp server is relatively simple. F
   IotSender iot = new IotSender(new Config(@"C:\TS\ASCEND2017\MedApp\MedApp\IotLib\IotLib\devices.json"));
 ```
 
+<br/>
+
 When the socket server receives a message about opening the box from an external device (such as Kompakt-5), sending an alert is relatively easy: 
 
 ```cs
   await iot.SendAlertAsync("AAAA", "open");
 ```
+
+<br/>
 
 If another device needs to send telemetry, the TCP server simply calls:
 
@@ -926,6 +943,8 @@ If another device needs to send telemetry, the TCP server simply calls:
     }
   ));
 ```
+
+<br/>
 
 There is also functionality to send messages in a batch. Some telemetry messages are sent at a very fast rate, and there is no point in sending them one after another to IoT Hub. We need to process them in order in Stream Analytics or in custom code, but we could send them in a batch by using code similar to the following:
 
@@ -969,16 +988,17 @@ To do that, after creating IoT Hub, we need to point to new (or existing) Azure 
 
 <br/>
 
-To send an image from the MedApp server, we need to:
+To send an image from the MedApp server (where `first1` is the name of the blob, and `anystream` is a stream with the image received from the socket server from device `AAAA`):
 
 ```cs
   await iot.UploadToBlobAsync("AAAA", "first1", anystream);
 ```
-...where `first1` is the name of the blob, and `anystream` is a stream with the image received from the socket server from device `AAAA`.
+
+<br/>
 
 Further processing can be done by using the classic Storage SDK. Moreover, we can trigger additional logic in [Azure Functions](https://azure.microsoft.com/en-us/services/functions/) (binding to blob) or [Azure WebJobs](https://docs.microsoft.com/en-us/azure/app-service-web/websites-webjobs-resources).
 
-#### Device twins and physical (postal) address
+#### Device twins and physical address
 
 Device twins are used to store information about the device location. In this solution, we have four tags: `address`, `city`, `country`, and `notes`.
 
@@ -1078,6 +1098,8 @@ To communicate with Service Bus, we can use any of these protocols:
 
 AMQP is an open standard application layer protocol maintained by OASIS and widely used in many enterprise solutions; therefore, it is very convenient as an integration broker. For more information, see [Best Practices for performance improvements using Service Bus Messaging](https://docs.microsoft.com/en-us/azure/service-bus-messaging/service-bus-performance-improvements).
 
+<br/>
+
 #### UWP dashboard
 
 Unfortunately, in UWP we are using .NET Core, which does not have full support for Service Bus topics. In the case of Windows Presentation Foundation (WPF) applications based on full .NET, subscriptions for topics can be done by using a standard SDK, such as the following:
@@ -1088,6 +1110,8 @@ Unfortunately, in UWP we are using .NET Core, which does not have full support f
   var m_msg = await m_clientAll.ReceiveAsync();
   if (m_msg != null) …
 ```
+
+<br/>
 
 In the case of a MedApp solution, there is a business need to have a dashboard written in UWP (code can work on Windows and HoloLens).
 
@@ -1346,11 +1370,15 @@ First, we need to create an instance of `HttpClientHelper`, where `[servicebusna
   hc = new HttpClientHelper("[servicebusnamespace]", "RootManageSharedAccessKey", "SharedAccessKey");
 ```
 
+<br/>
+
 To get messages, we need to run in a loop (separate task, background task – depends on needs), where `open` is the name of the topic, and `all` is the name of the subscription:
 
 ```cs
   m_msg = await hc.ReceiveMessage("https://[servicebusnamespace].servicebus.windows.net/open/subscriptions/all");
 ```
+
+<br/>
 
 When the message is received, we can check if it was sent by IoT Hub. To do that, we need to check if we have a device ID in the custom property named `iothub-connection-device-id`. We can then read the twin based on that device ID. 
 
@@ -1386,9 +1414,11 @@ Next, after processing (for example, dispatching an ambulance), we need to delet
   await Task.Factory.StartNew(waitForMessage);
 ```
 
+<br/>
+
 If we get an exception, it means that someone (a competing consumer) already processed (or is currently processing) the message.
 
-#### IoT Hub security - summary
+#### IoT Hub security summary
 
 One of the most important features in Azure IoT Hub is the great security model. We can explicitly grant permission using policy. Regardless of protocol (IoT Hub supports AMQP, MQTT, and HTTP), there are always per-device security credentials. The individual device can use a SAS token, a symmetric key, or an event X.509 certificate. For more information about security, see [Control access to IoT Hub](https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-security).
 
@@ -1402,8 +1432,9 @@ The creation of IoT Hub and devices can be automated by [installing Azure CLI 2.
 
 1. First, we need to log on to the subscription:
 
-    `az login`
-
+    ```
+      az login
+    ```
 
 2. We then select the correct subscription (here, it's `demotest`):
 
@@ -1423,6 +1454,8 @@ The creation of IoT Hub and devices can be automated by [installing Azure CLI 2.
      az iot hub create --name iothMedApp01 --resource-group rgMedApp --sku S1
    ```
 
+<br/>
+
 Thanks to the functionality in CLI 2.0, we can also work with elements inside IoT Hub – as in the following example – register new devices.
 
 ```
@@ -1430,17 +1463,23 @@ Thanks to the functionality in CLI 2.0, we can also work with elements inside Io
   az iot device create --hub-name iothMedApp01 --device-id dev02
 ```
 
+<br/>
+
 To get a connection string, we can either ask for a connection string or run a simple query for `primaryKey` and `deviceId` (those two values are required in the JSON file for our `Config` class). 
 
 ```
   az iot device list --hub-name iothMedApp01 --output table --query "[].{ deviceId: deviceId, primaryKey: authentication.symmetricKey.primaryKey }"
 ```
 
+<br/>
+
 To create the Service Bus topic and subscription, we can use an ARM template. To deploy, we simply need to call:
 
 ```
   az group deployment create --name med01 --resource-group rgMedApp --template-file servicebussubtopic.json --parameters @servicebussubtopic.parameters.json
 ```
+
+<br/>
 
 Our template file looks like (`servicebussubtopic.json`):
 
