Added {{ site.baseurl }} back to images

--- a/_posts/2017-06-07-RootPro.md
+++ b/_posts/2017-06-07-RootPro.md
@@ -14,7 +14,7 @@ verticals: [Retail & Consumer Goods]
 geolocation: [Asia]
 ---
 
-<img alt="Hagaki Sakka public" src="/images/RootPro-Hagaki/HagakiSakka.png" width="600">
+<img alt="Hagaki Sakka public" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagakiSakka.png" width="600">
 
 [Hagaki Sakka](http://www.hagakisakka.jp/product/hag_toc.html) is a widely used greeting card software in Japan. The software was developed by RootPro, and has set of functions that most users need when they create greeting cards, such as contacts management, print layout, and easy-to-use images. 
 
@@ -66,11 +66,11 @@ The hackfest procedure was as follows:
 3. If an issue arises, discuss and decide how to solve it.
 4. As required, provide new sample code of script.
 
-<img alt="Hackfest 1" src="/images/RootPro-Hagaki/HackFest1.JPG" width="400">
+<img alt="Hackfest 1" src="{{ site.baseurl }}/images/RootPro-Hagaki/HackFest1.JPG" width="400">
 
-<img alt="Hackfest 2" src="/images/RootPro-Hagaki/HackFest2.JPG" width="400">
+<img alt="Hackfest 2" src="{{ site.baseurl }}/images/RootPro-Hagaki/HackFest2.JPG" width="400">
 
-<img alt="Hackfest 3" src="/images/RootPro-Hagaki/HackFest3.JPG" width="400"> 
+<img alt="Hackfest 3" src="{{ site.baseurl }}/images/RootPro-Hagaki/HackFest3.JPG" width="400"> 
 
 
 ### Discussing issues related to running a UWP app of Hagaki Sakka
@@ -113,23 +113,23 @@ Following are some questions/issues along with answers/solutions that came up du
 
 Special thanks to Kazuki Tsuguma (the Microsoft App Consultant), who helped us publish the UWP app by teaching us the publishing process. As a result, the package is now available in the Windows Store. During the publishing process, we received a few questions about certificate criteria, so we then gave advice.  
 
-<img alt="WindowsStore" src="/images/RootPro-Hagaki/HagakiSakkaInStore.png" width="600">
+<img alt="Windows Store" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagakiSakkaInStore.png" width="600">
 
 <br/>
 
-<img alt="App1" src="/images/RootPro-Hagaki/HagaliSakkaApp1.jpg" width="600">
+<img alt="App1" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagaliSakkaApp1.jpg" width="600">
 
 <br/>
 
-<img alt="App2" src="/images/RootPro-Hagaki/HagaliSakkaApp2.jpg" width="600"> 
+<img alt="App2" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagaliSakkaApp2.jpg" width="600"> 
 
 <br/>
 
-<img alt="App3" src="/images/RootPro-Hagaki/HagaliSakkaApp3.jpg" width="600">
+<img alt="App3" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagaliSakkaApp3.jpg" width="600">
 
 <br/>
 
-<img alt="App4" src="/images/RootPro-Hagaki/HagaliSakkaApp4.jpg" width="600"> 
+<img alt="App4" src="{{ site.baseurl }}/images/RootPro-Hagaki/HagaliSakkaApp4.jpg" width="600"> 
 
 <br/>
 
